feat[#26]: 헤더 UI 추가, 장바구니 아이콘에 담긴 수량 표시하도록 구현

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "no-shadow": "warn",
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
